--- a/assets/sccs/components/_pagination-haendler.scss
+++ b/assets/sccs/components/_pagination-haendler.scss
@@ -34,7 +34,7 @@
       a{
 
         &.btnPager{
-          color: #98a4bc;
+          color: $wl-color-blue-dark-soft;
           width: 36px;
           height: 36px;
           transition: all 1s;
