--- a/assets/sccs/components/intromodul-default-u-produktdetail.scss
+++ b/assets/sccs/components/intromodul-default-u-produktdetail.scss
@@ -51,6 +51,7 @@
 
   .containerText-headline{
     width: 100%;
+    hyphens: none;
   }
 
   /* ===================================================================== */
@@ -181,6 +182,7 @@
     img{
       width: 100%;
       border-radius: 30px;
+      border: 1px solid #f6f6f6;
     }
 
     .introbildUnterschrift{
