--- a/assets/sccs/core/_typography.scss
+++ b/assets/sccs/core/_typography.scss
@@ -82,6 +82,14 @@ h1, .h1 {
 
   margin-top: 0;
   margin-bottom: -0.2em;
+
+  span{
+    &.produktNr{
+      font-size: 0.5em;
+      color: $wl-color-blue-dark-soft;
+    }
+  }
+
 }
 
 h2, .h2 {
