--- a/assets/sccs/core/_vars.scss
+++ b/assets/sccs/core/_vars.scss
@@ -50,6 +50,7 @@ $wl-bgcolor-body: $wl-color-white;
 $wl-color-black: #000000;
 $wl-color-blue: #1372D0;
 $wl-color-blue-dark: #001C57;
+$wl-color-blue-dark-soft: #98a4bc;;
 $wl-color-green: #31C390;
 $wl-color-bg-teaser: #f3f8fd;
 
