--- a/templates/_include-introblock-components/intromodul_produkt.twig
+++ b/templates/_include-introblock-components/intromodul_produkt.twig
@@ -1,29 +1,17 @@
 {# ###################################################################################################### #}
 {% set settings = {
-    '0-1500' : {
-        'size' : '650x366',
+    '0-900' : {
+        'size' : '635x358',
         'mode' : 'crop'
     },
-    '1-1200' : {
-        'size' : '650x366',
+    '1-700' : {
+        'size' : '494x278',
         'mode' : 'crop'
     },
-    '2-900' : {
-        'size' : '650x366',
+    '2-400' : {
+        'size' : '344x194',
         'mode' : 'crop'
-    },
-    '3-700' : {
-        'size' : '650x366',
-        'mode' : 'crop'
-    },
-    '4-500' : {
-        'size' : '650x366',
-        'mode' : 'crop'
-    },
-    '5-300' : {
-        'size' : '650x366',
-        'mode' : 'crop'
-    },
+    }
 } %}
 {% set image = entry.teaserImage.one()|default(false) %}
 {# -------------- Macro -------------- #}
@@ -76,9 +64,11 @@
             {% endif %}
 
            {% set produktName = entry.produktName |default(false) %}
+           {% set produktName = produktName|replace({ '[' : '<span class="produktNr">' }) %}
+           {% set produktName = produktName|replace({ ']' : '</span>' }) %}
            {% if produktName %}
             <div class="containerText-headline">
-                   <h1>{{ produktName}}</h1>
+                   <h1>{{ produktName|raw }}</h1>
             </div>
            {% endif %}
 
