--- a/assets/sccs/core/_vars.scss
+++ b/assets/sccs/core/_vars.scss
@@ -100,6 +100,10 @@ $wl-input-padding-bottom: 20px;
 // Default Font scale bounding for responsive Font in mixin responsive-font
 /* =================================================== */
 
+
+$min-bottomAbstandHeadline: 30;
+$max-bottomAbstandHeadline: 45;
+/* =================================================== */
 $base-font-size-min: 16px;
 $base-font-size-max: 18px;
 /* =================================================== */
