--- a/assets/sccs/components/_accordion.scss
+++ b/assets/sccs/components/_accordion.scss
@@ -1,3 +1,8 @@
+
+.accordionContent{
+  margin-top: -26px;
+}
+
 .accordion {
 
     width: 100%;
@@ -8,15 +13,15 @@
     align-items: stretch;
     align-content: stretch;
 
-    row-gap: 30px;
+    //row-gap: 30px;
 
     @include wl-breakpoint(800) {
       flex-direction: column;
     }
 
     /**
-       ============================ Accordion Body ============================
-       */
+     ============================ Accordion Body ============================
+     */
 
     .articleContainer {
       width: 100%;
@@ -26,14 +31,14 @@
    ===================================================================================
    */
 
-    $wl-arrow-position-top-max: 24;
-    $wl-arrow-position-top-min: 24;
+    $wl-arrow-position-top-max: 29;
+    $wl-arrow-position-top-min: 29;
 
-    $wl-arrow-position-top-hover-max: 32;
-    $wl-arrow-position-top-hover-min: 32;
+    $wl-arrow-position-top-hover-max: 26;
+    $wl-arrow-position-top-hover-min: 26;
 
-    $wl-arrow-position-right-max: 30;
-    $wl-arrow-position-right-min: 30;
+    $wl-arrow-position-right-max: 0;
+    $wl-arrow-position-right-min: 0;
 
     /**
    ===================================================================================
@@ -52,7 +57,7 @@
       padding: 0;
       margin: 0;
       list-style: none;
-      border-bottom: 1px solid $wl-color-blue;
+      border-bottom: 2px solid $wl-color-blue;
 
       li {
         position: relative;
@@ -64,8 +69,8 @@
 
         label {
 
-          @include responsive-font(26px, 33px, $h4-font-family, $base-line-height-h4);
-          font-weight: 300;
+          @include responsive-font(18px, 23px, $font-family-DINNextLTPro-bold, 1.34);
+
           color: $wl-color-black;
           padding-bottom: 20px;
 
@@ -76,13 +81,8 @@
           width: 100%;
           height: auto;
 
-          background-color: $wl-color-white;
-          padding: 30px 90px 20px 0px;
-
-          @include wl-breakpoint(600) {
-            padding-right: 60px;
-          }
-
+          background-color: transparent;
+          padding: 30px 40px 24px 0px;
 
         }
 
@@ -95,12 +95,12 @@
           height: auto;
           margin: 0px;
           padding: 0px;
-          background-color: #ffffff;
+          background-color: transparent;
 
 
           .accordion-content-body{
             width: 100%;
-            padding-top: 20px;
+            padding-top: 5px;
             padding-bottom: 20px;
 
             p {
@@ -131,8 +131,8 @@
                 transition: $transition;
                 &::after {
                 content: url('/assets/images/icons/arrow_accordion.svg');
-                height: 40px;
-                width: 40px;
+                height: 24px;
+                width: 24px;
                 position: absolute;
                 @include dynamic-distance($wl-arrow-position-right-min, $wl-arrow-position-right-max, right);
                 @include wl-breakpoint(600) {
@@ -152,8 +152,8 @@
                 transition: $transition;
                 &::after {
                 content: url('/assets/images/icons/arrow_accordion.svg');
-                height: 40px;
-                width: 40px;
+                height: 24px;
+                width: 24px;
                 position: absolute;
                @include dynamic-distance($wl-arrow-position-right-min, $wl-arrow-position-right-max, right);
                 @include wl-breakpoint(600) {
@@ -232,8 +232,8 @@
 
             &::after {
               content: url('/assets/images/icons/arrow_accordion.svg');
-              height: 40px;
-              width: 40px;
+              height: 24px;
+              width: 24px;
               position: absolute;
               @include dynamic-distance($wl-arrow-position-right-min, $wl-arrow-position-right-max, right);
               @include wl-breakpoint(600) {
