--- a/assets/sccs/components/_modul_textLinks.scss
+++ b/assets/sccs/components/_modul_textLinks.scss
@@ -1,21 +1,74 @@
 .modul-textLinks{
 
-  .wl-wrapper{
-    width: 100%;
+  .modulBg{
+    @include wl-breakpoint(900) {
+      background-image: url("/assets/images/img/bg-kreise-orange.svg");
+      background-repeat: no-repeat;
+      background-position: top 0px right 0px;
 
-    background-image: url("/assets/images/img/bg-kreis-einzeln.svg");
-    background-repeat: no-repeat;
-    background-position: top 0px left 0px;
 
+      background-size: 80px 80px;; //width height
+
+
+    }
 
   }
 
   .textLinks{
     grid-row: 1;
     grid-column-start: 2;
-    grid-column-end: 6;
-    min-height: 220px;
-    background-color: papayawhip;
+    grid-column-end: 7;
+
+
+    min-height: 225px;
+
+    @include wl-breakpoint(1200) {
+      grid-column-start: 2;
+      grid-column-end: 8;
+    }
+
+    @include wl-breakpoint(900) {
+      grid-column-start: 2;
+      grid-column-end: 12;
+    }
+
+    @include wl-breakpoint(500) {
+      grid-column-start: 1;
+      grid-column-end: 13;
+    }
+
+    .textLinksHeadline{
+      @include dynamic-distance($min-bottomAbstandHeadline, $max-bottomAbstandHeadline, padding-bottom);
+    }
+
+  }
+
+  .kreiseRechts{
+    grid-row: 1;
+    grid-column-start: 8;
+    grid-column-end: 12;
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-end;
+    align-items: flex-start;
+    align-content: stretch;
+
+
+    .kreise{
+      width: 212px;
+          svg{
+            width: 100%;
+          }
+    }
+
+
+    @include wl-breakpoint(900) {
+      display: none;
+    }
+
+
   }
 
 
