--- a/assets/sccs/components/intromodul-default-u-produktdetail.scss
+++ b/assets/sccs/components/intromodul-default-u-produktdetail.scss
@@ -3,7 +3,7 @@
   /* ===================================================================== */
 
   .intromodulAbstandTop{
-    @include dynamic-distance(60, 140, padding-top);
+    @include dynamic-distance(40, 70, padding-top);
   }
 
   /* ===================================================================== */
@@ -15,6 +15,10 @@
 
     @include wl-breakpoint(1200) {
       grid-column-end: 7;
+    }
+
+    @include wl-breakpoint(1150) {
+      grid-row: 2;
     }
 
     @include wl-breakpoint(900) {
@@ -93,6 +97,7 @@
     }
 
     @include wl-breakpoint(1150) {
+      grid-row: 3;
       grid-column-end: 7;
     }
 
@@ -156,15 +161,15 @@
     grid-column-start: 7;
     grid-column-end: 12;
 
-
     @include wl-breakpoint(1200) {
       grid-column-start: 8;
       grid-column-end: 12;
     }
 
     @include wl-breakpoint(1150) {
-      grid-row: 1/2;
-      grid-column-start: 7;
+      grid-row: 1;
+      grid-column-start: 2;
+      grid-column-end: 7;
     }
 
     @include wl-breakpoint(900) {
@@ -186,10 +191,16 @@
     }
 
     .introbildUnterschrift{
-      color: $wl-color-blue;
+      color: $wl-color-blue-dark-soft;
       text-align: right;
       padding-top: 15px;
       font-size: 0.9em;
+
+      @include wl-breakpoint(1150) {
+        padding-left: 20px;
+        padding-right: 20px;
+        text-align: left;
+      }
     }
 
   }
